no longer using Adafruit BME280 library

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,40 +10,42 @@
 
 [platformio]
 lib_dir = ../lib
-libdeps_dir = ../libdeps
 boards_dir = ../boards
 default_envs = avr
 
 [env]
-src_filter = +<*> -<.git/> -<.svn/> -<obsolete/>
-#lib_ldf_mode = chain+
+build_src_filter = +<*> -<.git/> -<.svn/> -<obsolete/>
+lib_extra_dirs =
+  ./lib
 platform = atmelavr
 framework = arduino
 build_unflags = -std=gnu++11
 build_flags = 
     -std=gnu++14 
     -Wno-unknown-pragmas
-;    -D"DEBUG_AVRTIMERS=1"
+    -Wl,-u,vfprintf
+    -lprintf_flt
 lib_deps =
    MySensors
 monitor_speed = 9600
-monitor_flags=
-  --filter 
+monitor_filters=
   direct
+
 
 [env:avr]
 board = mysensors328_rc8
 build_flags = 
     ${env.build_flags}
     -D"MY_NODE_ID=199"
-;    -D"REPORT_LIGHT=1"
-;    -D"REPORT_CLIMATE=1"
+    -DUSE_BME280_MIN
+    ;-DQUICK
 lib_deps =
    ${env.lib_deps}
-   Adafruit BME280 Library
-   Adafruit Unified Sensor
+   LeanBME280
+
 
 [env:120]
+; Node 120: no extra sensors
 board = mysensors328_rc8
 build_flags = 
     ${env.build_flags}
@@ -51,14 +53,15 @@ build_flags =
 lib_deps =
    ${env.lib_deps}
 
+
 [env:126]
+; Node 126: has BME280 climate sensor and light sensor
 board = mysensors328_rc8
 build_flags = 
     ${env.build_flags}
     -D"MY_NODE_ID=126"
     -D"REPORT_LIGHT=1"
-    -D"REPORT_CLIMATE=1"
+    -DUSE_BME280_MIN
 lib_deps =
    ${env.lib_deps}
-   Adafruit BME280 Library
-   Adafruit Unified Sensor
+   LeanBME280
